#changed password strength checking
- removed service;
- added custom validators for checking pass;

--- a/src/app/components/form-input-area/form-input-area.component.html
+++ b/src/app/components/form-input-area/form-input-area.component.html
@@ -6,4 +6,9 @@
        type="text"
        placeholder="Enter your password here"
 >
-<app-password-indicator [formData]="inputChecker"></app-password-indicator>
+<app-password-indicator
+  [formData]="inputChecker"
+  [isPasswordEasy]="isEasyValidationPassed()"
+  [isPasswordMedium]="isMediumValidationPassed()"
+  [isPasswordStrong]="isStrongValidationPassed()"
+></app-password-indicator>
