--- a/src/app/components/password-indicator/password-indicator.component.html
+++ b/src/app/components/password-indicator/password-indicator.component.html
@@ -1,7 +1,7 @@
 <div class="pass-marker"
-     [class.-easy]="formData.value?.match(passwordCheck.Difficulty.easy)"
-     [class.-medium]="formData.value?.match(passwordCheck.Difficulty.medium)"
-     [class.-strong]="formData.value?.match(passwordCheck.Difficulty.strong)"
+     [class.-easy]="isPasswordEasy"
+     [class.-medium]="isPasswordMedium"
+     [class.-strong]="isPasswordStrong"
      [class.-invalid]="formData.invalid"
      [class.-empty]="!formData.value"
 >
